--- a/Frontend/homePage.html
+++ b/Frontend/homePage.html
@@ -7,9 +7,7 @@
 
   <title>imPowered</title>
 
-  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  
-  <!-- Main CSS File -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -34,7 +32,7 @@
           <h1>Where Accessibility Meets Possibility And You Meet Your Dreams!</h1>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 ">
-          <img src="/img/Parking-removebg.png" class="img-fluid" alt="Image">
+          <img src="./img/homeImage.png" class="img-fluid" alt="Image">
         </div>
       </div>
     </div>
@@ -180,8 +178,9 @@
     </div>
   </footer>
   
-<script src="/js/main.js"></script>
 
 </body>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="/js/main.js"></script>
 
 </html>
